--- a/MedicalSystem/MedicalSystem.csproj
+++ b/MedicalSystem/MedicalSystem.csproj
@@ -8,9 +8,9 @@
     <Product>LTs Medical System</Product>
     <Description>Information system for medical organizations based on a neural network.</Description>
     <Company>Dan8LTs</Company>
-    <Copyright>Copyright © CODE BLOG 2019, © Dan8LTs </Copyright>
-    <AssemblyVersion>0.1.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
+    <Copyright>Copyright © CODE BLOG 2019, © Dan8LTs                Image by rawpixel.com (ru.freepick.com)</Copyright>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
     <ApplicationIcon>reportorium_6202.ico</ApplicationIcon>
   </PropertyGroup>
 
